--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "shoppingbasket",
+  "name": "angular-basket-end-point",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "test": "mocha client/src/models/specs",
-    "start": "nodemon server.js",
-    "webpack": "cd client && webpack -w"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/amcgilloway/angular-basket-end-point.git"
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +21,9 @@
   "devDependencies": {
     "mocha": "^3.0.2",
     "webpack": "^2.7.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/amcgilloway/angular-basket-end-point/issues"
+  },
+  "homepage": "https://github.com/amcgilloway/angular-basket-end-point#readme"
 }
