--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "angular": "^1.6.8",
     "angular-route": "^1.6.8",
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "growl": ">=1.10.0"
   },
   "devDependencies": {
     "mocha": "^3.0.2",
